--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Index</title>
-        </head>
+</head>
 <body>
-<h1 th:text="${tekst}"></h1>
+<div class="container">
+    <div th:replace="fragments/navbar :: navbar"></div>
+    <h1 th:text="${tekst}"></h1>
+</div>
 </body>
 </html>
