--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -1,30 +1,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Questions</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-<table class="table thead-dark col-6 col-sm-4">
-    <thead>
-    <tr>
-        <th>Id</th>
-        <th>Title</th>
-        <th></th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-        <th:block th:each="question : ${questions}">
+<div class="container">
+    <div th:replace="fragments/navbar :: navbar"></div>
+    <table class="table thead-dark col-6 col-sm-4">
+        <thead>
         <tr>
-            <td th:text="${question.id}"></td>
-            <td th:text="${question.title}"></td>
-            <td><a th:href="@{|/questions/edit/${question.id}|}" class="btn btn-primary">Edytuj</a></td>
-            <td><a th:href="@{|/questions/remove/${question.id}|}" class="btn btn-danger">Usun</a></td>
+            <th>Id</th>
+            <th>Title</th>
+            <th></th>
+            <th></th>
         </tr>
-        </th:block>
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            <th:block th:each="question : ${questions}">
+            <tr>
+                <td th:text="${question.id}"></td>
+                <td th:text="${question.title}"></td>
+                <td><a th:href="@{|/questions/edit/${question.id}|}" class="btn btn-primary">Edytuj</a></td>
+                <td><a th:href="@{|/questions/remove/${question.id}|}" class="btn btn-danger">Usun</a></td>
+            </tr>
+            </th:block>
+        </tbody>
+    </table>
 <!--<form action="/questions/add" method="post">-->
     <!--<@spring.bind "question" />-->
     <!--<div class="form-group">-->
@@ -33,5 +33,6 @@
         <!--<button type="submit" class="btn btn-success">Dodaj pytanie</button>-->
     <!--</div>-->
 <!--</form>-->
+</div>
 </body>
 </html>
