--- a/src/main/resources/templates/questionEdit.html
+++ b/src/main/resources/templates/questionEdit.html
@@ -1,16 +1,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Edit Question</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
-<body>
-<form action="#" th:action="@{/questions/edit}" th:object="${question}" method="post">
-    <div class="form-group">
-        <input type="hidden" th:field="*{id}"/>
-        <p>Title: <input type="text" th:field="*{title}"/></p>
-        <button type="submit" class="btn btn-success">Zapisz</button>
-    </div>
-</form>
+<div class="container">
+    <div th:replace="fragments/navbar :: navbar"></div>
+    <form action="#" th:action="@{/questions/edit}" th:object="${question}" method="post">
+        <div class="form-group">
+            <input type="hidden" th:field="*{id}"/>
+            <p>Title: <input type="text" th:field="*{title}"/></p>
+            <button type="submit" class="btn btn-success">Zapisz</button>
+        </div>
+    </form>
+    <div th:replace="fragments/footer :: footer"></div>
+</div>
 </body>
 </html>
