--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -15,24 +15,21 @@
         </tr>
         </thead>
         <tbody>
-            <th:block th:each="question : ${questions}">
+        <th:block th:each="question : ${questions}">
             <tr>
                 <td th:text="${question.id}"></td>
                 <td th:text="${question.title}"></td>
                 <td><a th:href="@{|/questions/edit/${question.id}|}" class="btn btn-primary">Edytuj</a></td>
                 <td><a th:href="@{|/questions/remove/${question.id}|}" class="btn btn-danger">Usun</a></td>
             </tr>
-            </th:block>
+        </th:block>
         </tbody>
     </table>
-<!--<form action="/questions/add" method="post">-->
-    <!--<@spring.bind "question" />-->
-    <!--<div class="form-group">-->
-        <!--Tytuł:-->
-        <!--<@spring.formInput "question.title"/>-->
-        <!--<button type="submit" class="btn btn-success">Dodaj pytanie</button>-->
-    <!--</div>-->
-<!--</form>-->
+    <form th:object="${question}" th:action="@{/questions/add}" method="post">
+        <div class="form-group">Title: <input type="text" th:field="*{title}" placeholder="Title"/></div>
+        <div class="form-group"><button type="submit" class="btn btn-success">Add question</button></div>
+    </form>
+    <div th:replace="fragments/footer :: footer"></div>
 </div>
 </body>
 </html>
